VOICE-79: Fix title letter spacing and line height

--- a/src/scss/sections/introduction-section.scss
+++ b/src/scss/sections/introduction-section.scss
@@ -46,9 +46,10 @@
     }
 
     h2 {
-      font-size: 5.2rem;
+      font-size: 52px;
       font-weight: bold;
-      line-height: 7.8rem;
+      line-height: 64px;
+      letter-spacing: -1.33px;
       width: 80%;
       margin: 40px auto 0;
 
